@@ -1,5 +1,6 @@
 == 3.5 ==
 
+* Fixed issue with not loaded coupon forms
 * Fixed communication issue when all subscription is selected
 * Fixed user display name and level name issues for ping data
 * Implemented new Authorize.net gateway which changes Authorize ARB and AIM gateways
